--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support:multidex:1.0.3'
 
-
+    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
 
 }
