--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     //implementation 'org.apache.poi:poi:4.0.0'
     //implementation 'org.apache.poi:poi-ooxml:4.0.0'
 
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support:multidex:1.0.3'
 
